testsuite/tests/type-data/should_fail/TDMultiple01.stderr
TDMultiple01.hs:5:18: error: [GHC-29916]
    Multiple declarations of ‘P’
    At: TDMultiple01.hs:5:18
        TDMultiple01.hs:4:1-12

